--- a/client/package.json
+++ b/client/package.json
@@ -13,16 +13,31 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "react": "^18.3.1",
-    "react-calendar": "^5.0.0",
-    "react-dom": "^18.3.1",
-    "react-scripts": "^5.0.1"
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.7",
+    "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@types/node": "^22.5.3",
-    "@types/react": "^18.3.5",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.55",
     "@types/react-calendar": "^4.1.0",
-    "@types/react-dom": "^18.3.0",
-    "typescript": "^5.5.4"
+    "@types/react-dom": "^18.2.19"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
